[project]
name = "quiz-solver"
version = "1.0.0"
description = "Optimized Quiz Solver with Logic-First Approach and Minimal API Usage"
authors = [
    {name = "IITM Student", email = "24f1001493@ds.study.iitm.ac.in"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["quiz", "solver", "llm", "automation", "iitm", "tds"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "Flask>=3.0.0",
    "Werkzeug>=3.0.1",
    "selenium>=4.16.0",
    "webdriver-manager>=4.0.1",
    "requests>=2.31.0",
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "PyPDF2>=3.0.1",
    "Pillow>=10.1.0",
    "google-generativeai>=0.3.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/quiz-solver"
Documentation = "https://github.com/yourusername/quiz-solver#readme"
Repository = "https://github.com/yourusername/quiz-solver.git"
Issues = "https://github.com/yourusername/quiz-solver/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["quiz_solver"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true